<resources>
    <string name="app_name">星空直播安卓端Demo</string>
    <string name="signin">注册</string>
    <string name="login">登陆</string>
    <string name="pls_ent_code">请输入密码</string>
    <string name="pls_ent_acc">请输入账号</string>
    <string name="pls_ent_code_aga">请重新输入密码</string>
    <string name="name_code_empty">账号或密码为空</string>
    <string name="login_failed">登录失败！</string>
    <string name="login_succ">登陆成功！</string>
    <string name="pls_ent_nickname">请输入昵称</string>
    <string name="live_list">直播列表</string>
    <string name="exit_login">退出登陆</string>
    <string name="exit_app">退出程序</string>
    <string name="create">创建</string>
    <string name="pls_ent_maintext">请输入直播描述</string>
    <string name="pls_ent_title">请输入直播标题</string>
    <string name="pls_ent_appname">请输入直播名</string>
    <string name="my_live_list">我的直播</string>
    <string name="create_app">创建直播</string>
    <string name="exit_login_succ">退出登陆成功！</string>
    <string name="update">更新</string>
    <string name="update_app">更新直播</string>
    <string name="press_fab_to_my_apps">点击右下角fab打开我的直播app</string>
    <string name="star_live">星空直播</string>
    <string name="exit">退出</string>
    <string name="search_user">搜索用户</string>
    <string name="search_app">搜索直播</string>
    <string name="pls_ent_username_or_appname">请输入用户名或直播名！</string>
    <string name="search">搜索</string>

</resources>
