<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/yellow"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:id="@+id/bt_signin" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/textInputLayout1"
        app:passwordToggleEnabled="true"
        android:layout_above="@id/bt_signin"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/yellow">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pls_ent_code"
            android:inputType="textPassword"
            android:textColorHint="@color/yellow"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/textInputLayout2"
        android:layout_above="@id/textInputLayout1"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/yellow">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pls_ent_nickname"
            android:inputType="text"
            android:textColorHint="@color/yellow"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/textInputLayout3"
        android:layout_above="@id/textInputLayout2"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/yellow">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pls_ent_acc"
            android:inputType="text"
            android:textColorHint="#ffc107"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_action_back"/>

</RelativeLayout>
